--- a/text-trail-effect-on-mousemove/index.html
+++ b/text-trail-effect-on-mousemove/index.html
@@ -15,6 +15,36 @@
     <title>Text Trail Effect On Mousemove</title>
 </head>
 <body>
+    <style>
+        /* general */
+html, body{
+    margin: 0 auto;
+    padding: 0;
+
+    width: 100%;
+    height: 100vh;
+
+    background-color: #000;
+    overflow: hidden;
+
+    font-family: "Poppins", sans-serif;
+}
+
+.text{
+    position: absolute;
+    pointer-events: none;
+
+    font-size: 6em;
+    font-weight: 500;;
+    -webkit-text-stroke: 1.6px #fff;
+    text-transform: uppercase;
+    color: #000;
+}
+
+.text span{
+    color: #fff;
+}
+    </style>
     <div class="cursor">
         <div class="text">css effects</div>
         <div class="text">css effects</div>
@@ -23,6 +53,14 @@
         <div class="text"><span>css effects</span></div>
     </div>
 
-    <script src="./script.js"></script>
+    <script>
+        document.addEventListener("mousemove", e =>{
+    gsap.to(".text",{
+        x: e.clientX,
+        y: e.clientY,
+        stagger: -0.02
+    });
+})
+    </script>
 </body>
 </html>
